           not work; fixed.

         • Method ‘get_RLum’ for ‘RLum.Analysis’ returned a confusing
           error if what was provided via 'subset' was not a logical
           expression; fixed.

         • ‘structure_RLum()’ and ‘names_RLum()’ each got a method to
           deal with a list of ‘RLum’ objects.

  Bugfixes and changes:

         • ‘analyse_IRSAR.RF()’

             • Multicore processing now also supports Windows (#47)

             • Fixed a bug where manually specifying the number of CPU
               cores via 'method.control = list(cores = x)' was not
               respected,

             • mixing of curves (e.g., regenerated first, natural
               second) led to a crash of the function, even the new
               structure was correctly specified; fixed (#61),

             • the function will not break anymore uncontrolled of both
               RF curves are of similar extension on the x-axis.

         • ‘analyse_pIRIRSequence()’

             • If the number of records did not match the sequence
               structure the function crashed with a confusing error
               message. Now it shows an error and returns ‘NULL’,

             • make the argument ‘main’ more powerful if the input is a
               list,

             • add missing items to the manual.

         • ‘calc_HomogeneityTest()’

             • The calculation was wrong for the option ‘log = TRUE’
               (the default); fixed (#63).

         • ‘calc_Kars2008()’

             • In some cases the calculated LxTx values of the
               simulated natural dose response curve were slightly
               underestimated and its maximum value differed from the
               individually calculated nN(ss) value. The approach to
               calculate the natural DRC was changed and now yields a
               maximum LxTx value indistinguishable from nN(ss).

             • Numeric output in the plot should now always be inside